# osmpy

./: .gitignore  HISTORY.rst  LICENSE.md  Makefile  README.md  README.rst  pyproject.toml  pyvenv.cfg  requirements.txt  requirements_dev.txt  setup.py
osm_road_length/: __init__.py  osm_road_length.py  queries.py
osmpy/: __init__.py  core.py  queries.py
tests/: test_core.py  test_osm_road_length.py
